--- a/data/pre_processing.ipynb
+++ b/data/pre_processing.ipynb
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:13:03.562862Z",
-     "start_time": "2025-05-28T18:13:00.612106Z"
+     "end_time": "2025-05-30T18:16:58.558418Z",
+     "start_time": "2025-05-30T18:16:58.551421Z"
     }
    },
    "cell_type": "code",
@@ -40,23 +40,14 @@
     "from sklearn.manifold import TSNE\n"
    ],
    "id": "c93333fb48f47465",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:14:08.527345Z",
-     "start_time": "2025-05-28T18:14:04.634298Z"
+     "end_time": "2025-05-30T18:17:03.841645Z",
+     "start_time": "2025-05-30T18:16:58.710559Z"
     }
    },
    "cell_type": "code",
@@ -66,13 +57,13 @@
    ],
    "id": "b17a258ed4236501",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:15:06.843611Z",
-     "start_time": "2025-05-28T18:15:06.827620Z"
+     "end_time": "2025-05-30T18:17:03.883188Z",
+     "start_time": "2025-05-30T18:17:03.856664Z"
     }
    },
    "cell_type": "code",
@@ -220,44 +211,44 @@
        "</div>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:15:08.525611Z",
-     "start_time": "2025-05-28T18:15:08.521746Z"
+     "end_time": "2025-05-30T18:17:03.985162Z",
+     "start_time": "2025-05-30T18:17:03.977886Z"
     }
    },
    "cell_type": "code",
    "source": "df_temp = df",
    "id": "97831b721be2637e",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:15:08.862793Z",
-     "start_time": "2025-05-28T18:15:08.858558Z"
+     "end_time": "2025-05-30T18:17:04.062030Z",
+     "start_time": "2025-05-30T18:17:04.056705Z"
     }
    },
    "cell_type": "code",
    "source": "df = df_temp",
    "id": "eb69233a5c801c9a",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:15:09.809323Z",
-     "start_time": "2025-05-28T18:15:09.762172Z"
+     "end_time": "2025-05-30T18:17:04.336805Z",
+     "start_time": "2025-05-30T18:17:04.270807Z"
     }
    },
    "cell_type": "code",
@@ -277,18 +268,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:15:35.698159Z",
-     "start_time": "2025-05-28T18:15:34.842051Z"
+     "end_time": "2025-05-30T18:17:05.439885Z",
+     "start_time": "2025-05-30T18:17:04.428157Z"
     }
    },
    "cell_type": "code",
@@ -297,42 +288,35 @@
     "df['type'] = LabelEncoder().fit_transform(df['type'])\n",
     "\n",
     "# Drop non-numeric ID columns\n",
-    "df = df.drop(['isFlaggedFraud'], axis=1)\n",
+    "df = df.drop(['isFlaggedFraud','Unnamed: 0','newbalanceDest','amount'], axis=1)\n",
     "\n",
     "df_f = df[df['isFraud'] == 1]  # All rows where target == 1\n",
     "df_nf = df[df['isFraud'] == 0]  # All rows where target == 0\n"
    ],
    "id": "ace22f47fe915902",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:15:36.511969Z",
-     "start_time": "2025-05-28T18:15:36.500745Z"
+     "end_time": "2025-05-30T18:17:05.511417Z",
+     "start_time": "2025-05-30T18:17:05.496949Z"
     }
    },
    "cell_type": "code",
-   "source": "df_nf.head()",
+   "source": "df_f.head()",
    "id": "60146af74a9fd1f9",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   Unnamed: 0  type    amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
-       "0           0     3   9839.64       170136.0       160296.36             0.0   \n",
-       "1           1     3   1864.28        21249.0        19384.72             0.0   \n",
-       "4           4     3  11668.14        41554.0        29885.86             0.0   \n",
-       "5           5     3   7817.71        53860.0        46042.29             0.0   \n",
-       "6           6     3   7107.77       183195.0       176087.23             0.0   \n",
-       "\n",
-       "   newbalanceDest  isFraud  \n",
-       "0             0.0        0  \n",
-       "1             0.0        0  \n",
-       "4             0.0        0  \n",
-       "5             0.0        0  \n",
-       "6             0.0        0  "
+       "     type  oldbalanceOrg  newbalanceOrig  oldbalanceDest  isFraud\n",
+       "2       4          181.0             0.0             0.0        1\n",
+       "3       1          181.0             0.0         21182.0        1\n",
+       "251     4         2806.0             0.0             0.0        1\n",
+       "252     1         2806.0             0.0         26202.0        1\n",
+       "680     4        20128.0             0.0             0.0        1"
       ],
       "text/html": [
        "<div>\n",
@@ -353,89 +337,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>type</th>\n",
-       "      <th>amount</th>\n",
        "      <th>oldbalanceOrg</th>\n",
        "      <th>newbalanceOrig</th>\n",
        "      <th>oldbalanceDest</th>\n",
-       "      <th>newbalanceDest</th>\n",
        "      <th>isFraud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9839.64</td>\n",
-       "      <td>170136.0</td>\n",
-       "      <td>160296.36</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1864.28</td>\n",
-       "      <td>21249.0</td>\n",
-       "      <td>19384.72</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11668.14</td>\n",
-       "      <td>41554.0</td>\n",
-       "      <td>29885.86</td>\n",
+       "      <td>181.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7817.71</td>\n",
-       "      <td>53860.0</td>\n",
-       "      <td>46042.29</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>181.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>21182.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7107.77</td>\n",
-       "      <td>183195.0</td>\n",
-       "      <td>176087.23</td>\n",
+       "      <th>251</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2806.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2806.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26202.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20128.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:15:37.325399Z",
-     "start_time": "2025-05-28T18:15:37.277316Z"
+     "end_time": "2025-05-30T18:17:05.638892Z",
+     "start_time": "2025-05-30T18:17:05.582474Z"
     }
    },
    "cell_type": "code",
@@ -454,46 +420,138 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 30
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:16:43.513613Z",
-     "start_time": "2025-05-28T18:16:14.743902Z"
+     "end_time": "2025-05-30T18:17:29.588218Z",
+     "start_time": "2025-05-30T18:17:05.734255Z"
     }
    },
    "cell_type": "code",
    "source": "df_nf.to_csv(\"../dataset/majority.csv\")",
    "id": "19b5fc56713bbd36",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-28T18:16:43.565129Z",
-     "start_time": "2025-05-28T18:16:43.520631Z"
+     "end_time": "2025-05-30T18:17:29.687668Z",
+     "start_time": "2025-05-30T18:17:29.642154Z"
     }
    },
    "cell_type": "code",
    "source": "df_f.to_csv(\"../dataset/minority.csv\")",
    "id": "a96d24ee9c08f18f",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 39
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-30T18:17:29.714679Z",
+     "start_time": "2025-05-30T18:17:29.699680Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "bf5d50da113852c7"
+   "source": "df_f.head()",
+   "id": "bf5d50da113852c7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     type  oldbalanceOrg  newbalanceOrig  oldbalanceDest  isFraud\n",
+       "2       4          181.0             0.0             0.0        1\n",
+       "3       1          181.0             0.0         21182.0        1\n",
+       "251     4         2806.0             0.0             0.0        1\n",
+       "252     1         2806.0             0.0         26202.0        1\n",
+       "680     4        20128.0             0.0             0.0        1"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>oldbalanceOrg</th>\n",
+       "      <th>newbalanceOrig</th>\n",
+       "      <th>oldbalanceDest</th>\n",
+       "      <th>isFraud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>21182.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2806.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2806.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26202.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20128.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -507,18 +565,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-24T14:51:39.888431Z",
-     "start_time": "2025-05-24T14:51:39.506366Z"
+     "end_time": "2025-05-30T17:49:47.061097Z",
+     "start_time": "2025-05-30T17:49:47.057622Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "X = df_nf.drop([\"isFlaggedFraud\"],axis=1)\n",
-    "y = df_nf[\"isFlaggedFraud\"]"
-   ],
+   "source": "",
    "id": "711262b8093b6b03",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": null
   },
   {
    "metadata": {
@@ -528,13 +583,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y,\n",
-    "    test_size=0.2,        # 20% for testing\n",
-    "    random_state=42       # for reproducibility\n",
-    ")"
-   ],
+   "source": "",
    "id": "a2a9a967cc1e58bd",
    "outputs": [],
    "execution_count": 22
